system-config-printer (1.5.7-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Add Tim Waugh's public key to debian/upstream/signing-key.asc and
    tell uscan to check the tarball signatures.
  * Drop 0001-Adjust-python-paths.patch, not needed as all Python source
    files are installed into the same directory.
  * Refresh other patches via quilt.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 16 Sep 2015 14:00:17 +0300

system-config-printer (1.4.8-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * New upstream release.
    - Fixes TypeError when trying to change printer properties
      (closes: #791705)
  * Drop patches obsoleted by upstream changes:
    - 0003-Use-our-custom-cpk-install-package-name.patch
    - 0008-return-exception-rather-than-looping.patch
  * Refresh patches via quilt
  * Fix package description spelling error caught by lintian
    - Insert 'one' in ... allow one to...

  [ Dmitry Shachnev ]
  * Drop python-gobject-2 dependency, no longer needed.
  * Build-depend on python, instead of unneeded python-all-dev.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 15 Sep 2015 15:11:44 +0300

system-config-printer (1.4.6-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Drop obsolete python-gnomekeyring Suggests, the package has been
    ported to use GnomeKeyring via introspection.

  [ Laurent Bigonville ]
  * New upstream release (Closes: #744869)
  * debian/control.in: Bump Standards-Version to 3.9.6 (no further changes)
  * debian/rules: Pass --with-udevdir to the configure, to install the udev
    helpers and config files to the proper directory
  * debian/system-config-printer-udev.install: The udev helpers and the
    config files are now installed in the proper directory
  * d/p/0003-Use-our-custom-cpk-install-package-name.patch,
    d/p/0006-use-paper-size-default-in-etc-papersize.patch: Refreshed
  * Drop d/p/0005-Fix-French-translation.patch,