@@ -1,2 +1,0 @@
-usr/lib/python*/site-packages/cupshelpers
-etc/cupshelpers/
