@@ -1,0 +1,2 @@
+usr/lib/python3/dist-packages/cupshelpers
+etc/cupshelpers/
