@@ -13,7 +13,7 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/cdbs/1/rules/utils.mk
 DEB_DH_INSTALL_ARGS := --list-missing
 
-DEB_PYTHON2_MODULE_PACKAGES := python-cupshelpers \
+DEB_PYTHON3_MODULE_PACKAGES := python3-cupshelpers \
                                system-config-printer \
                                system-config-printer-udev
 DEB_PYTHON_PRIVATE_MODULES_DIRS_system-config-printer-udev := /lib/udev/
@@ -24,8 +24,8 @@ DEB_CONFIGURE_EXTRA_FLAGS := \
 		--with-udevdir=/lib/udev \
 		--with-systemdsystemunitdir=/lib/systemd/system
 
-configure/python-cupshelpers::
+configure/python3-cupshelpers::
 	cp debug.py smburi.py cupshelpers/
 
-cleanbuilddir/python-cupshelpers::
+cleanbuilddir/python3-cupshelpers::
 	rm -rf cupshelpers/debug.py cupshelpers/smburi.py
